--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "digesto",
+  "name": "angular",
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.0",
@@ -11,6 +11,7 @@
     "angular-sanitize": "~1.2.0",
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
+    "angular-route": "~1.2.0",
     "angular-ui-router": "~0.2.11"
   },
   "devDependencies": {
