--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "angular-sanitize": "~1.2.0",
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
-    "angular-ui-router": "~0.2.11",
-    "angucomplete": "*"
+    "angular-ui-router": "~0.2.11"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
